# ML-TESTING-Labeling-Data-ingestion-f

./: .gitignore  README.md  pyproject.toml  run_training.py
src/Labeling-data-ingestion/: main.py
src/Labeling-data-ingestion/data_handler/: import_data.py
src/Labeling-data-ingestion/model/: main.ipynb
src/Labeling-data-ingestion/model/.ipynb_checkpoints/: model-checkpoint.py
src/Labeling_data_ingestion/: config.py  run_pipeline.py
src/Labeling_data_ingestion/app/: app.py  streamlit_app.py
src/Labeling_data_ingestion/data_handler/: import_data.py  process_data.py
src/Labeling_data_ingestion/models/: models.py
src/Labeling_data_ingestion/models/filter/: readme.txt  rerank.py
src/Labeling_data_ingestion/models/sklearn_models/: sk_models.py  threshold_classifier.py  transformer.py
src/Labeling_data_ingestion/models/sklearn_models(first_sieve)/: sk_models.py
src/Labeling_data_ingestion/predict/: sklearn_predict.py
src/Labeling_data_ingestion/tf_idf.py/: logistic_regression.py
src/Labeling_data_ingestion/train/: readme.txt  train.py  train_sklearn.py  training_performance_comparison.txt
visual_evaluation/: evaluation.ipynb
